--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "animejs": "^3.2.1",
     "bootstrap": "^5.2.3",
     "firebase": "^9.22.0",
+    "letterizejs": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
