--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "animejs": "^3.2.1",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "bootstrap": "^5.2.3",
     "firebase": "^9.22.0",
     "letterizejs": "^2.0.1",
